Se hacen correciones se deja lista la capa de service, tambien se hacen correciones en dto y una que otra en models